04/2 Deque(DS)개선